force-app/main/default/objects/Note__c/Note__c.object-meta.xml
<CustomObject>
    <description>Job Search Tracker app shared Note object</description>
    <label>Note</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>