force-app/main/default/objects/Note__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Job Search Tracker relationship to Conversation</description>
    <inlineHelpText>If this note is related to a conversation, link it here.</inlineHelpText>
    <label>Conversation</label>
    <referenceTo>Conversation</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>