force-app/main/default/objects/Note__c/fields/Job_Search_Communication__c.field-meta.xml
<CustomField>
    <fullName>Job_Search_Communication__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Job Search Tracker relationship</description>
    <inlineHelpText>If this note is about a communication link it here.</inlineHelpText>
    <label>Job Search Communication</label>
    <referenceTo>Job_Search_Communication__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>