force-app/main/default/objects/Note__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Job Search Tracker Note body</description>
    <inlineHelpText>Enter your notes here.</inlineHelpText>
    <label>Note</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>