force-app/main/default/objects/Note__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Job Search Tracker relationship to Role</description>
    <inlineHelpText>If this note is in regards to a Role, link it here.</inlineHelpText>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>